@@ -22,7 +22,9 @@
 #ifndef DEPRECATIONMGR_H
 #define DEPRECATIONMGR_H
 
+#ifdef _MSC_VER 
 #pragma warning(disable : 4786 )  // identifier was truncated to 'number' characters
+#endif 
 
 #include "Utilities.h"
 
