@@ -24,7 +24,9 @@
 // Use at your own risk!
 // ==========================================================
 
+#ifdef _MSC_VER 
 #pragma warning (disable : 4786) // identifier was truncated to 'number' characters
+#endif
 
 #include "CacheFile.h"
 #include "FreeImageIO.h"
