@@ -22,8 +22,11 @@
 // Use at your own risk!
 // =====================================================================
 
-#ifdef WIN32
+#ifdef _MSC_VER 
 #pragma warning (disable : 4786) // identifier was truncated to 'number' characters
+#endif
+
+#ifdef WIN32
 #include <windows.h>
 #include <io.h>
 #else
